@@ -5,23 +5,9 @@ import java.util.List;
 
 public class Statistics{
     private List<String> options;
-    private int currOption = 0;
     public Statistics() {
-        this.options = Arrays.asList("Main Menu");
-    }
-    public boolean isSelected(int i) {
-        return i == currOption;
+        this.options = List.of("Main Menu");
     }
 
-    public int getOptionsSize() {
-        return this.options.size();
-    }
 
-    public List<String> getOptions() {
-        return this.options;
-    }
-
-    public boolean isSelectedMainMenu() {
-        return isSelected(0);
-    }
 }
